--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@
   --white: #ffff;
   --gray-100: #e1e1e6;
   --gray-300: #a8a8b3;
+  --gray-700: #323238;
   --gray-500: #2a2a3c;
   --gray-900: #121214;
 
